--- a/WebContent/resources/css/sb-admin-2.css
+++ b/WebContent/resources/css/sb-admin-2.css
@@ -434,3 +434,9 @@ table.dataTable thead .sorting:after {
     border-left-width: 0;
   }
 }
+.text-center {
+	text-align: center;	
+}
+.red-text{
+	color: red;
+}
